src/objects/Subproject__c.object
<CustomObject>
    <customHelpPage>Projects_help_page</customHelpPage>
    <fields>
        <fullName>CRM__c</fullName>
        <label>Performance CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Add your project description here (max 4000 chars)</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>Performance ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ends_date__c</fullName>
        <defaultValue>Today() + 45</defaultValue>
        <label>End date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Subproject_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_level__c</fullName>
        <label>Priority level</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Top</fullName>
                <color>#CC0000</color>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF6600</color>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#33CC00</color>
                <default>true</default>
            </value>
            <value>
                <fullName>Medium low</fullName>
                <color>#00CCCC</color>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#3366FF</color>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project type</label>
        <referenceTo>Project_type__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Subprojects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_media__c</fullName>
        <label>Performance Social media</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <description>old 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+musqot__Status_Image_Id__c,TEXT(musqot__Status__c),16,16)</description>
        <formula>CASE(Status__c, 
&apos;Not Started&apos;, IMAGE(&apos;/resource/1433929854000/musqot__Planned&apos;,TEXT(Status__c),16,16), 
&apos;In Progress&apos;, IMAGE(&apos;/resource/1433930034000/musqot__Active&apos;,TEXT(Status__c),16,16),
&apos;Completed&apos;,IMAGE(&apos;/resource/1433930013000/musqot__Finnished&apos;,TEXT(Status__c),16,16),
&apos;Deferred&apos;,IMAGE(&apos;/resource/1433930023000/musqot__Deferred&apos;,TEXT(Status__c),16,16),
IMAGE(&apos;/resource/1443021886000/musqot__StatusOther&apos;,TEXT(Status__c),16,16))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_Id__c</fullName>
        <label>Status image id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <valueSet>
		<valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#3366FF</color>
                <default>true</default>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#FFCC33</color>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#33CC00</color>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <color>#CC0000</color>
            </value>
			</valueSetDefinition>
        </valueSet>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>oldId__c</fullName>
        <label>oldId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>planid__c</fullName>
        <formula>if(  ISBLANK(Parent_project__c),Project_del__r.Project_del__c   ,
Parent_project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>planid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tempId__c</fullName>
        <label>tempId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Plan_enddate</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Ends_date__c &lt; Parent_project__r.Starts_date__c,true, false)</errorConditionFormula>
        <errorMessage>Subproject name should not end before Parent project__r.Name+ &apos; startdate</errorMessage>
    </validationRules>
</CustomObject>